crates/zenith/tests/snapshots/screens__opening_connecting__80x24__high-contrast__16.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, 80, 24))"
---
                                   *   *                            ·
                                         •             ∙
       ∙        ·                                       *
         **        •               •       *
 •   ∙·                                                      ∙
  ·                                                         •
                                                                        ∙    *
                                                                   ·
∙                  ▄▄██  ██▄▄      ZENITH                               •
                 ▄█████  █████▄    The terminal of Constellation
             •  ▄██████████████▄   NIPS-CERN
                ████████████████   0.2.0


          •                    Connecting to SOLAR  ·

*
    ∙       ·  ·                                         ·
      ∙                                                ∙
                *                        ·     ∙            *         ·

                       •                                           •
       *            •          •
                                 *        *·   ∙
--- every cell not listed is White on Black
 8: 16-31  LightYellow on Black
 8: 35-40  LightYellow on Black bold
 9: 16-31  LightYellow on Black
10: 16-31  LightYellow on Black
11: 16-31  LightYellow on Black
