crates/zenith/tests/snapshots/screens__opening_connecting__80x24__high-contrast__256.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, 80, 24))"
---
                                   *   *                            ·
                                         •             ∙
       ∙        ·                                       *
         **        •               •       *
 •   ∙·                                                      ∙
  ·                                                         •
                                                                        ∙    *
                                                                   ·
∙                  ▄▄██  ██▄▄      ZENITH                               •
                 ▄█████  █████▄    The terminal of Constellation
             •  ▄██████████████▄   NIPS-CERN
                ████████████████   0.2.0


          •                    Connecting to SOLAR  ·

*
    ∙       ·  ·                                         ·
      ∙                                                ∙
                *                        ·     ∙            *         ·

                       •                                           •
       *            •          •
                                 *        *·   ∙
--- every cell not listed is @255 on @233
 8: 16-31  @215 on @233
 8: 35-40  @215 on @233 bold
 9: 16-31  @215 on @233
10: 16-31  @215 on @233
11: 16-31  @215 on @233
